<resources>
    <string name="_registration_url">http://www.pandanet-igs.com/igs_users/register</string>
    <string name="_news_url">http://www.pandanet.co.jp/smt/en/topics</string>
    <string name="_women_url">http://www.pandanet.co.jp/English/soudan/soudan.htm</string>
    <string name="_pro_games_url">http://www.pandanet.co.jp/smt/en/game_rec/</string>
    <string name="_online_help_url">http://tetsuki.gentgo.be/help.html</string>
    <string name="_tetsuki_url">http://tetsuki.gentgo.be</string>
    <string name="app_name">Pandanet(Go)</string>
    <string name="_USE_JAPANESE_DEFAULTS_">0</string>
    <string name="one_point">1 point</string>
    <string name="minus_one_point">-1 point</string>
    <string name="half_point">½ point</string>
    <string name="minus_half_point">-½ point</string>
    <string name="minus_n_points">-%d points</string>
    <string name="minus_n_half_points">-%d½ points</string>
    <string name="n_min">%d min.</string>
    <string name="nine_board">9×9 board</string>
    <string name="thirteen_board">13×13 board</string>
    <string name="nineteen_board">19×19 board</string>
    <string name="go_nxn_board" formatted="false">Go, %d×%d board</string>
    <string name="n_minutes">%d minutes</string>
    <string name="n_min_n_moves" formatted="false">%d min. / %d moves</string>
    <string name="n_min_n_min_n_moves" formatted="false">%d min. + %d min. / %d moves</string>
    <string name="n_stones_s" formatted="false">%d stones, %s</string>
    <string name="no_handicap_s">no handicap, %s</string>
    <string name="change_status">Change your status?</string>
    <string name="status_will_be_accepting">Your status will be set to Accepting Games.</string>
    <string name="guest_login">Guest Login</string>
    <string name="cant_play_because_guest">You cannot play games or send invitations because you are logged in as a guest.</string>
    <string name="opponent_asks_minus_n_komi">Your Opponent Suggests a Reverse Komi of %d Points</string>
    <string name="opponent_asks_minus_n_half_komi">Your Opponent Suggests a Reverse Komi of %d½ Points</string>
    <string name="opponent_asks_n_komi">Your Opponent Suggests a Komi of %d Points</string>
    <string name="opponent_asks_n_half_komi">Your Opponent Suggests a Komi of %d½ Points</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="disconnected">Disconnected</string>
    <string name="connection_lost">The connection to the server was lost.</string>
    <string name="server_not_found">Server not found</string>
    <string name="server_not_found_message">The app could not connect to the Pandanet server. If you are connected via Wi-Fi it is possible that your firewall is blocking the port. Please review your settings or try again later.</string>
    <string name="connection_restored">Connection Restored</string>
    <string name="connection_back_message">The connection to the server is back.</string>
    <string name="white_won">White has won the game.</string>
    <string name="black_won">Black has won the game.</string>
    <string name="s_won_on_time">%s has won on time.</string>
    <string name="s_won_by_resignation">%s has won by resignation.</string>
    <string name="s_won_by_n_points" formatted="false">%s has won by %d points.</string>
    <string name="s_won_by_n_half_points" formatted="false">%s has won by %d½ points.</string>
    <string name="tie">"Game over.
The game is a tie."</string>
    <string name="save_question">Do you want to delete this game or keep it in your archive?</string>
    <string name="game_over">Game Over</string>
    <string name="delete">Delete</string>
    <string name="save">Archive</string>
    <string name="opponent_lost_connection">Opponent Lost Connection</string>
    <string name="opponent_has_n_minutes">Your opponent lost his connection. He has %d minutes to reconnect and continue the game. So please stay logged in.</string>
    <string name="allow_time_to_reconnect">Your opponent lost his connection. Please allow a few minutes for your opponent to reconnect and resume the game.</string>
    <string name="opponent_back">Your opponent is back. The game continues.</string>
    <string name="won_disconnect">You won your game against %s because he did not reconnect.</string>
    <string name="lost_disconnect">Sorry, you lost your game against %s because you disconnected too often or you reconnected too late.</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="ok">OK</string>
    <string name="players">Players</string>
    <string name="me">Me</string>
    <string name="everybody">Everybody</string>
    <string name="available">Available</string>
    <string name="player">Player</string>
    <string name="playing">playing</string>
    <string name="watching">watching</string>
    <string name="idle">idle</string>
    <string name="s_vs_s" formatted="false">%s vs. %s</string>
    <string name="game_n">game %d ...</string>
    <string name="status_nocaps">status</string>
    <string name="status">Status</string>
    <string name="my_status">My Status</string>
    <string name="busy">Busy</string>
    <string name="refusing">Refusing games</string>
    <string name="looking">Looking for a game</string>
    <string name="accepting">Accepting games</string>
    <string name="invite_long">Invite to a Game</string>
    <string name="n_wins_n_losses" formatted="false">%d wins, %d losses</string>
    <string name="statistics">statistics</string>
    <string name="info_nocaps">info</string>
    <string name="info">Info</string>
    <string name="new_game">New Game</string>
    <string name="invite">Invite</string>
    <string name="bc">BC</string>
    <string name="beginner">Beginner</string>
    <string name="n_kyu">%dk</string>
    <string name="beginner_class">Beginner Class</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="invitations">Invitations</string>
    <string name="sent">Sent Invitations</string>
    <string name="received">Received Invitations</string>
    <string name="invitation">Invitation</string>
    <string name="you_sent">"You have sent this invitation.
The other party has not answered yet."</string>
    <string name="sent_to_you">"This invitation was sent to you.
The other party is waiting for your answer."</string>
    <string name="accept_invitation">Accept</string>
    <string name="decline">Decline</string>
    <string name="n_points">%d points</string>
    <string name="n_half_points">%d½ points</string>
    <string name="scoring_done">Scoring Done</string>
    <string name="end_game">End Game</string>
    <string name="resign">Resign</string>
    <string name="resign_sure">Are you sure you want to give up this game?</string>
    <string name="pass">Pass</string>
    <string name="no_game">No game</string>
    <string name="loading_game">Loading game...</string>
    <string name="no_online_game">You are not playing an online game.</string>
    <string name="delete_last_move">Delete Last Move</string>
    <string name="choose_handicap">Choose Handicap</string>
    <string name="handicap">Handicap</string>
    <string name="komi">Komi</string>
    <string name="no_komi">no komi</string>
    <string name="captured">Captured</string>
    <string name="territory">Territory</string>
    <string name="total">Total</string>
    <string name="no_handicap">No handicap</string>
    <string name="n_handicap_stones">%d handicap stones</string>
    <string name="n_stones">%d stones</string>
    <string name="email_game">Email Game</string>
    <string name="game_not_sent">Game not sent</string>
    <string name="in_scoring">"Both players have passed
and are still removing dead stones."</string>
    <string name="archived_game">Archived Games</string>
    <string name="archive">Archive</string>
    <string name="record_game">Record Game</string>
    <string name="my_game">My Game</string>
    <string name="back_to_game">Go back to my game</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="game">game</string>
    <string name="pandanet">Pandanet</string>
    <string name="settings_nocaps">settings</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="appearance_settings">Appearance</string>
    <string name="watching_settings">Watching</string>
    <string name="playing_settings">Playing</string>
    <string name="enable_zoom">Zoom in</string>
    <string name="auto_zoom">Zoom out after move</string>
    <string name="tap_play">With these settings it takes one tap to place a stone.</string>
    <string name="tap_zoom_play">"With these settings it takes two taps to place a stone:
1. Zoom, 2. Play."</string>
    <string name="tap_play_confirm">"With these settings it takes two taps to place a stone:
1. Play, 2. Confirm."</string>
    <string name="tap_zoom_play_confirm">"With these settings it takes three taps to place a stone:
1.Zoom, 2. Play, 3. Confirm."</string>
    <string name="server">Server</string>
    <string name="login">Login</string>
    <string name="as_guest">Login as guest</string>
    <string name="user_id">User ID</string>
    <string name="required">required</string>
    <string name="password">Password</string>
    <string name="kibitz">Speak to other observers</string>
    <string name="speak_to_opponent">Speak to opponent</string>
    <string name="opponent_requests_undo">Opponent requests undo</string>
    <string name="opponent_undo_message">Your opponent would like to take back his last move.</string>
    <string name="take_back">Take Back</string>
    <string name="coordinates">Show coordinates</string>
    <string name="remove_dead_stones">Remove Dead Stones</string>
    <string name="remove_dead_stones_message">It is time to count the score. Tap on dead groups to remove them from the board. Tap “Done” when you are finished.</string>
    <string name="winner">Winner</string>
    <string name="n_periods_n_secs" formatted="false">%d periods of %d sec.</string>
    <string name="ns_plus_nxns" formatted="false">%ds + %d×%ds</string>
    <string name="few_settings_message">To find an opponent fast, only a few time settings are available.</string>
    <string name="you_sent_open_invitation">"You have sent this open invitation.
The game will start when an opponent is found."</string>
    <string name="provisional">(provisional)</string>
    <string name="any_player">Find me an Opponent</string>
    <string name="random">Random</string>
    <string name="my_color">My Color</string>
    <string name="board_size">Board Size</string>
    <string name="info_message">Type here some information about yourself that you want to share with everybody.</string>
    <string name="connect">Connect</string>
    <string name="background">Background</string>
    <string name="board">Board</string>
    <string name="stones">Stones</string>
    <string name="tatami">Tatami</string>
    <string name="green_felt">Green felt</string>
    <string name="oak_board">Oak board</string>
    <string name="kaya_board">Kaya board</string>
    <string name="round_stones">Round stones</string>
    <string name="flat_stones">Flat stones</string>
    <string name="verify">Verify</string>
    <string name="new_password_message">The new password must be between 5 and 10 characters. It can not contain spaces. To verify, you have to enter the new password a second time.</string>
    <string name="invitations_info">"To play online, one player has to send an invitation to his opponent. The game automatically starts as soon as the opponent accepts the invitation.

Alternatively, you can also ask the Pandanet server to find an opponent for you. The game automatically starts as soon as another player with a similar rank does the same."</string>
</resources>