<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
        <TextView android:gravity="right" android:id="@id/sent" android:layout_width="90.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/password" />
        <EditText android:id="@id/password1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
        <TextView android:gravity="right" android:id="@id/received" android:layout_width="90.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/verify" />
        <EditText android:id="@id/password2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
        <Button android:textSize="15.0dip" android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="0.5" android:textAllCaps="true" />
        <Button android:textSize="15.0dip" android:id="@id/save" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="0.5" android:textAllCaps="true" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/new_password_message" android:layout_weight="0.0" />
</LinearLayout>