<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:gravity="top" android:id="@id/info" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="EditText" />
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="15.0dip" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="2.0dip" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="true" />
        <Button android:textSize="15.0dip" android:id="@id/save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="4.0dip" android:text="@string/ok" android:layout_weight="1.0" android:textAllCaps="true" />
    </LinearLayout>
    <TextView android:id="@id/received" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/info_message" />
</LinearLayout>