<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="right" android:id="@id/sent" android:layout_width="85.0dip" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:text="@string/user_id" />
        <EditText android:id="@id/userid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="EditText" android:singleLine="true" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="right" android:id="@id/received" android:layout_width="85.0dip" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:text="@string/password" />
        <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="EditText" android:password="true" android:singleLine="true" />
    </LinearLayout>
    <Button android:layout_gravity="right" android:id="@id/connect" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:minWidth="120.0dip" android:text="@string/connect" android:textAllCaps="true" />
</LinearLayout>