<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@drawable/white" android:gravity="center|left" android:layout_gravity="center_vertical" android:background="@drawable/darkpandablue" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="56.0dip" android:text="@string/invitation" />
    <ListView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="158.0dip" />
    <TextView android:textColor="@drawable/gray4" android:gravity="center|left|top" android:layout_gravity="center_horizontal" android:id="@id/footer" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="TextView" android:layout_weight="1.0" />
    <TextView android:textColor="@drawable/gray4" android:gravity="center|left|top" android:id="@id/infolabel" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="TextView" />
    <LinearLayout android:layout_gravity="right" android:id="@id/linearLayout1" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip">
        <Button android:textSize="16.0dip" android:textColor="#ffbb0000" android:gravity="center" android:id="@id/declinebutton" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="0.0dip" android:text="@string/decline" android:layout_weight="0.0" android:textAllCaps="true" />
        <Button android:textSize="16.0dip" android:textColor="#ff009900" android:gravity="center" android:layout_gravity="center" android:id="@id/acceptbutton" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="0.0dip" android:text="@string/accept_invitation" android:layout_weight="0.0" android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>